# rust-tee

./: .gitignore  Cargo.toml  Enclave.edl  Makefile  Xargo.toml  readme.md
app-sample/: Makefile  app.c  app.h
src/: lib.rs
